Putting in revisional changes from Felix

--- a/tex/thesis/acronyms.tex
+++ b/tex/thesis/acronyms.tex
@@ -1,17 +1,20 @@
 \chapter*{List of Acronyms}
 
 \begin{acronym}
+	\acro{ASN}{Autonomous System Number}
+	\acro{CFR}{Cloudflare Radar}
+	\acro{DoH}{DNS over HTTPS}
+	\acro{DoTLS}{DNS over TLS}
+	\acro{FTTH}{Fiber-to-the-home}
+	\acro{GEO}{Geostationary Orbit}
+	\acro{GS}{Ground Station}
+	\acro{IQI}{Internet Quality Index}
 	\acro{ISL}{Inter-Satellite Link}
 	\acro{ISP}{Internet Service Provider}
-	\acro{FTTH}{Fiber-to-the-home}
-	\acro{LEO}{Low-Earth~Orbit}
-	\acro{MEO}{Medium-Earth~Orbit}
-	\acro{GEO}{Geostationary~Orbit}
-	\acro{RTT}{Round-Trip-Time}
-	\acro{ASN}{Autonomous System Number}
-	\acro{PoP}{Point~of~Presence}
-	\acro{GS}{Ground~Station}
-	\acro{CFR}{Cloudflare Radar}
-	\acro{IQI}{Internet Quality Index}
+	\acro{LEO}{Low-Earth Orbit}
+	\acro{MEO}{Medium-Earth Orbit}
+	\acro{PoP}{Point of Presence}
+	\acro{RTT}{Round-Trip Time}
 	\acro{SNO}{Satellite Network Operator}
+	\acro{STK}{Systems Tool Kit}
 \end{acronym}
