--- a/tex/thesis/main.tex
+++ b/tex/thesis/main.tex
@@ -47,7 +47,7 @@
     \dateOfHandingIn{11. November 2024}
 
      % The name and affiliation of the author’s supervisor.
-    \nameOfMySupervisor{Prof.\,Dr. Vaibhav Bajpai \newline Prof. Dr. Tilmann Rabl}
+    \nameOfMySupervisor{Prof.\,Dr. Vaibhav Bajpai \newline Prof.\,Dr. Tilmann Rabl}
 
     % A list with the names of the additional examiners.
     \additionalExaminers{Dr. Vasilis Ververis}
