--- a/tex/thesis/references/references.bib
+++ b/tex/thesis/references/references.bib
@@ -39,13 +39,14 @@
   year = {2020},
 }
 
-@Article{Aleksic2010,
-  author     = {Slavi{\v s}a Aleksic and Ana Lovric},
-  journal    = {2010 7th International Symposium on Communication Systems, Networks and Digital Signal Processing, CSNDSP 2010},
-  title      = {Power consumption of wired access network technologies},
-  year       = {2010},
-  pages      = {147-151},
-  abstract   = {Wired broadband access can be realized using various technologies
+@article{Aleksic2010,
+  author = {Slavi{\v s}a Aleksic and Ana Lovric},
+  journal = {2010 7th International Symposium on Communication Systems, Networks
+             and Digital Signal Processing, CSNDSP 2010},
+  title = {Power consumption of wired access network technologies},
+  year = {2010},
+  pages = {147-151},
+  abstract = {Wired broadband access can be realized using various technologies
               , configurations and protocols. It is widely deployed and able to
               provide both high data rates and high reliability. These features
               are of strong importance for many advanced applications. Since the
@@ -60,23 +61,27 @@
               passive optical networks (1G-PON and 10G-PON) are shown. {
               \copyright} 2010 IEEE.},
   bdsk-url-1 = {https://doi.org/10.1109/CSNDSP16145.2010.5580441},
-  doi        = {10.1109/CSNDSP16145.2010.5580441},
-  isbn       = {9781861353696},
-  publisher  = {IEEE Computer Society},
+  doi = {10.1109/CSNDSP16145.2010.5580441},
+  isbn = {9781861353696},
+  publisher = {IEEE Computer Society},
 }
 
-@InProceedings{DBLP:conf/plans/KassasKKSHNKK23,
-  author    = {Zaher M. Kassas and Sharbel E. Kozhaya and Haitham Kanj and Joe Saroufim and Samer Watchi Hayek and Mohammad Neinavaie and Nadim Khairallah and Joe Khalife},
-  booktitle = {{IEEE/ION} Position, Location and Navigation Symposium, {PLANS} 2023, Monterey, CA, USA, April 24-27, 2023},
-  title     = {Navigation with Multi-Constellation {LEO} Satellite Signals of Opportunity: Starlink, OneWeb, Orbcomm, and Iridium},
-  year      = {2023},
-  pages     = {338--343},
+@inproceedings{DBLP:conf/plans/KassasKKSHNKK23,
+  author = {Zaher M. Kassas and Sharbel E. Kozhaya and Haitham Kanj and Joe
+            Saroufim and Samer Watchi Hayek and Mohammad Neinavaie and Nadim
+            Khairallah and Joe Khalife},
+  booktitle = {{IEEE/ION} Position, Location and Navigation Symposium, {PLANS}
+               2023, Monterey, CA, USA, April 24-27, 2023},
+  title = {Navigation with Multi-Constellation {LEO} Satellite Signals of
+           Opportunity: Starlink, OneWeb, Orbcomm, and Iridium},
+  year = {2023},
+  pages = {338--343},
   publisher = {{IEEE}},
   bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl    = {https://dblp.org/rec/conf/plans/KassasKKSHNKK23.bib},
-  doi       = {10.1109/PLANS53410.2023.10140066},
+  biburl = {https://dblp.org/rec/conf/plans/KassasKKSHNKK23.bib},
+  doi = {10.1109/PLANS53410.2023.10140066},
   timestamp = {Sun, 08 Oct 2023 18:45:28 +0200},
-  url       = {https://doi.org/10.1109/PLANS53410.2023.10140066},
+  url = {https://doi.org/10.1109/PLANS53410.2023.10140066},
 }
 
 @article{Henry2002,
@@ -194,15 +199,15 @@
   url = {https://doi.org/10.48550/arXiv.2403.13497},
 }
 
-@misc{QuarkslabsBlogUserTerminalFirmsware,
-  author = {Carlo Ramponi},
-  month = {8},
-  note = {[Online; accessed April 18, 2024]},
-  title = {Diving into Starlink's User Terminal Firmware},
-  year = {2023},
+@Misc{QuarkslabsBlogUserTerminalFirmsware,
+  author     = {Carlo Ramponi},
+  month      = {8},
+  note       = {[Online; accessed April 18, 2024]},
+  title      = {Diving into Starlink's User Terminal Firmware},
+  year       = {2023},
   bdsk-url-1 = {https://blog.quarkslab.com/starlink.html},
-  keywords = {Starlink,Firmware},
-  url = {https://blog.quarkslab.com/starlink.html},
+  keywords   = {Starlink,Firmware},
+  url        = {https://blog.quarkslab.com/starlink.html},
 }
 
 @Misc{WoutersDumpingUserTerminalFirmware,
@@ -216,19 +221,22 @@
   url        = {https://www.esat.kuleuven.be/cosic/blog/dumping-and-extracting-the-spacex-starlink-user-terminal-firmware/},
 }
 
-@InProceedings{DBLP:conf/hotnets/HauriBGS20,
-  author    = {Yannick Hauri and Debopam Bhattacherjee and Manuel Grossmann and Ankit Singla},
-  booktitle = {HotNets '20: The 19th {ACM} Workshop on Hot Topics in Networks, Virtual Event, USA, November 4-6, 2020},
-  title     = {"Internet from Space" without Inter-satellite Links},
-  year      = {2020},
-  editor    = {Ben Y. Zhao and Heather Zheng and Harsha V. Madhyastha and Venkat N. Padmanabhan},
-  pages     = {205--211},
+@inproceedings{DBLP:conf/hotnets/HauriBGS20,
+  author = {Yannick Hauri and Debopam Bhattacherjee and Manuel Grossmann and
+            Ankit Singla},
+  booktitle = {HotNets '20: The 19th {ACM} Workshop on Hot Topics in Networks,
+               Virtual Event, USA, November 4-6, 2020},
+  title = {"Internet from Space" without Inter-satellite Links},
+  year = {2020},
+  editor = {Ben Y. Zhao and Heather Zheng and Harsha V. Madhyastha and Venkat N.
+            Padmanabhan},
+  pages = {205--211},
   publisher = {{ACM}},
   bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl    = {https://dblp.org/rec/conf/hotnets/HauriBGS20.bib},
-  doi       = {10.1145/3422604.3425938},
+  biburl = {https://dblp.org/rec/conf/hotnets/HauriBGS20.bib},
+  doi = {10.1145/3422604.3425938},
   timestamp = {Mon, 20 Jun 2022 09:15:37 +0200},
-  url       = {https://doi.org/10.1145/3422604.3425938},
+  url = {https://doi.org/10.1145/3422604.3425938},
 }
 
 @inproceedings{DBLP:conf/www/MohanFCBRMO24,
@@ -414,108 +422,120 @@
   url = {https://doi.org/10.1145/2504730.2504765},
 }
 
-@unpublished{Kohnmann24,
+@Misc{Kohnmann24,
   author = {Thomas Kohnmann},
-  title = {Everything you need to know about Project Kuiper, Amazon’s satellite
-           broadband network},
-  month = jun,
-  year = {2024},
+  month  = jun,
+  note   = {[Online; accessed November 9, 2024]},
+  title  = {Everything you need to know about Project Kuiper, Amazon’s satellite broadband network},
+  year   = {2024},
+  url    = {https://www.aboutamazon.com/news/innovation-at-amazon/what-is-amazon-project-kuiper},
 }
 
-@InProceedings{DBLP:conf/sigcomm/VasishtSC21,
-  author    = {Deepak Vasisht and Jayanth Shenoy and Ranveer Chandra},
-  booktitle = {{ACM} {SIGCOMM} 2021 Conference, Virtual Event, USA, August 23-27, 2021},
-  title     = {{L2D2:} low latency distributed downlink for {LEO} satellites},
-  year      = {2021},
-  editor    = {Fernando A. Kuipers and Matthew C. Caesar},
-  pages     = {151--164},
+@inproceedings{DBLP:conf/sigcomm/VasishtSC21,
+  author = {Deepak Vasisht and Jayanth Shenoy and Ranveer Chandra},
+  booktitle = {{ACM} {SIGCOMM} 2021 Conference, Virtual Event, USA, August 23-27
+               , 2021},
+  title = {{L2D2:} low latency distributed downlink for {LEO} satellites},
+  year = {2021},
+  editor = {Fernando A. Kuipers and Matthew C. Caesar},
+  pages = {151--164},
   publisher = {{ACM}},
   bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl    = {https://dblp.org/rec/conf/sigcomm/VasishtSC21.bib},
-  doi       = {10.1145/3452296.3472932},
+  biburl = {https://dblp.org/rec/conf/sigcomm/VasishtSC21.bib},
+  doi = {10.1145/3452296.3472932},
   timestamp = {Sun, 02 Oct 2022 16:15:05 +0200},
-  url       = {https://doi.org/10.1145/3452296.3472932},
+  url = {https://doi.org/10.1145/3452296.3472932},
 }
 
 @Misc{CloudflareRadarDocsIQI,
-  author   = {Cloudflare},
-  title    = {Cloudflare Radar Docs Glossary: Internet Quality Index},
-  keywords = {Documentation,Cloudflare Radar,IQI},
+  author    = {Cloudflare},
+  note      = {[Online; accessed November 9, 2024]},
+  title     = {Cloudflare Radar Docs Glossary: Internet Quality Index},
+  keywords  = {Documentation,Cloudflare Radar,IQI},
+  timestamp = {2024-11-09},
+  url       = {https://developers.cloudflare.com/radar/glossary/#iqi},
 }
 
-@Article{DavidBelson2023,
-  author    = {David Belson, Carlos Rodrigues},
-  journal   = {The Cloudflare Blog},
-  title     = {Introducing the Cloudflare Radar Internet Quality Page},
-  year      = {2023},
-  month     = jun,
-  keywords  = {Clouflare Radar,IQI},
+@article{DavidBelson2023,
+  author = {David Belson, Carlos Rodrigues},
+  journal = {The Cloudflare Blog},
+  title = {Introducing the Cloudflare Radar Internet Quality Page},
+  year = {2023},
+  month = jun,
+  keywords = {Clouflare Radar,IQI},
   timestamp = {2024-09-17},
-  url       = {https://blog.cloudflare.com/introducing-radar-internet-quality-page/},
+  url = {https://blog.cloudflare.com/introducing-radar-internet-quality-page/},
 }
 
 @Misc{CloudflareGlobalNetwork2024,
   author       = {Cloudflare},
   howpublished = {Cloudflare Website},
   month        = sep,
+  note         = {[Online; accessed November 9, 2024]},
   title        = {The Global Cloudflare-Network},
   year         = {2024},
+  url          = {https://www.cloudflare.com/de-de/network/},
 }
 
 @Misc{rootservers092024,
   author       = {root-servers.org},
   howpublished = {Website},
   month        = sep,
+  note         = {[Online; accessed October 10 2024]},
   title        = {Root Servers},
   year         = {2024},
   keywords     = {Map,Root Servers},
   url          = {https://root-servers.org/},
 }
 
-@Article{Pekhterev2021,
-  author   = {Sergei Pekhterev},
-  journal  = {SatMagazine},
-  title    = {The Bandwidth Of The StarLink Constellation...and the assessment of its potential subscriber base in the USA.},
-  year     = {2021},
-  month    = nov,
+@article{Pekhterev2021,
+  author = {Sergei Pekhterev},
+  journal = {SatMagazine},
+  title = {The Bandwidth Of The StarLink Constellation...and the assessment of
+           its potential subscriber base in the USA.},
+  year = {2021},
+  month = nov,
   keywords = {Satellites,Beam,Beam Radius,Throughput},
 }
 
-@Article{Bartels1957,
-  author  = {Julius Bartels},
+@article{Bartels1957,
+  author = {Julius Bartels},
   journal = {Proceedings of the National Academy of Sciences},
-  title   = {Solar Influences of Geomagnetism},
-  year    = {1957},
-  number  = {1},
-  pages   = {75-81},
-  volume  = {43},
-  doi     = {10.1073/pnas.43.1.75},
-  eprint  = {https://www.pnas.org/doi/pdf/10.1073/pnas.43.1.75},
-  url     = {https://www.pnas.org/doi/abs/10.1073/pnas.43.1.75},
+  title = {Solar Influences of Geomagnetism},
+  year = {1957},
+  number = {1},
+  pages = {75-81},
+  volume = {43},
+  doi = {10.1073/pnas.43.1.75},
+  eprint = {https://www.pnas.org/doi/pdf/10.1073/pnas.43.1.75},
+  url = {https://www.pnas.org/doi/abs/10.1073/pnas.43.1.75},
 }
 
 @Misc{GFZ2023,
   author       = {Helmholtz-Zentrum Potsdam - Deutsches GeoForschungsZentrum GFZ},
   howpublished = {Website},
+  note         = {[Online; accessed November 9, 2024]},
   title        = {Geomagnetic Kp index},
   year         = {2023},
   keywords     = {Data,Solarmagnetic Storms},
   url          = {https://kp.gfz-potsdam.de/en/},
 }
 
-@Article{DBLP:journals/cm/LinCCCHB21,
-  author    = {Xingqin Lin and Stefano Cioni and Gilles Charbit and Nicolas Chuberre and Sven Hellsten and Jean{-}Francois Boutillon},
-  journal   = {{IEEE} Commun. Mag.},
-  title     = {On the Path to 6G: Embracing the Next Wave of Low Earth Orbit Satellite Access},
-  year      = {2021},
-  number    = {12},
-  pages     = {36--42},
-  volume    = {59},
+@article{DBLP:journals/cm/LinCCCHB21,
+  author = {Xingqin Lin and Stefano Cioni and Gilles Charbit and Nicolas
+            Chuberre and Sven Hellsten and Jean{-}Francois Boutillon},
+  journal = {{IEEE} Commun. Mag.},
+  title = {On the Path to 6G: Embracing the Next Wave of Low Earth Orbit
+           Satellite Access},
+  year = {2021},
+  number = {12},
+  pages = {36--42},
+  volume = {59},
   bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl    = {https://dblp.org/rec/journals/cm/LinCCCHB21.bib},
-  doi       = {10.1109/MCOM.001.2100298},
+  biburl = {https://dblp.org/rec/journals/cm/LinCCCHB21.bib},
+  doi = {10.1109/MCOM.001.2100298},
   timestamp = {Tue, 21 Mar 2023 21:09:03 +0100},
-  url       = {https://doi.org/10.1109/MCOM.001.2100298},
+  url = {https://doi.org/10.1109/MCOM.001.2100298},
 }
 
 @Article{Lab2024,
@@ -525,178 +545,203 @@
   year     = {2024},
   month    = aug,
   keywords = {Starlink,Ethical,War},
-  url      = {https://globalvoices.org/2024/08/20/starlink-in-sudan-a-lifeline-or-war-facilitator/#:~:text=Starlink's strategic role in conflict zones&text=It is also used in,hotspots affected by armed conflict.},
+  url      = {https://globalvoices.org/2024/08/20/starlink-in-sudan-a-lifeline-or-war-facilitator/#:
+         ~:text=Starlink's strategic role in conflict zones&text=It is also used
+         in,hotspots affected by armed conflict.},
 }
 
-@Article{Walsh2024,
-  author   = {Nick Paton Walsh; Alex Marquardt; Florence Davey-Attlee},
-  journal  = {CNN World},
-  title    = {Ukraine relies on Starlink for its drone war. Russia appears to be bypassing sanctions to use the devices too},
-  year     = {2024},
-  month    = mar,
+@article{Walsh2024,
+  author = {Nick Paton Walsh; Alex Marquardt; Florence Davey-Attlee},
+  journal = {CNN World},
+  title = {Ukraine relies on Starlink for its drone war. Russia appears to be
+           bypassing sanctions to use the devices too},
+  year = {2024},
+  month = mar,
   keywords = {Starlink,Ukraine,Russia,War},
 }
 
-@Article{bojor2024emerging,
-  author  = {Bojor, Laviniu and Petrache, Tudoric{\u{a}} and Cristescu, Cristian},
+@article{bojor2024emerging,
+  author = {Bojor, Laviniu and Petrache, Tudoric{\u{a}} and Cristescu, Cristian},
   journal = {Land Forces Academy Review},
-  title   = {Emerging Technologies in Conflict: The Impact of Starlink in the Russia--Ukraine War},
-  year    = {2024},
-  number  = {2},
-  pages   = {185--194},
-  volume  = {29},
+  title = {Emerging Technologies in Conflict: The Impact of Starlink in the
+           Russia--Ukraine War},
+  year = {2024},
+  number = {2},
+  pages = {185--194},
+  volume = {29},
 }
 
-@Article{Abels2024,
-  author    = {Abels, Joscha},
-  journal   = {European Journal of International Relations},
-  title     = {Private infrastructure in geopolitical conflicts: the case of Starlink and the war in Ukraine},
-  year      = {2024},
-  issn      = {1460-3713},
-  month     = jun,
-  doi       = {https://doi.org/10.1177/13540661241260653},
+@article{Abels2024,
+  author = {Abels, Joscha},
+  journal = {European Journal of International Relations},
+  title = {Private infrastructure in geopolitical conflicts: the case of
+           Starlink and the war in Ukraine},
+  year = {2024},
+  issn = {1460-3713},
+  month = jun,
+  doi = {https://doi.org/10.1177/13540661241260653},
   publisher = {SAGE Publications},
 }
 
-@Article{Izhikevich2024,
-  author    = {Izhikevich, Liz and Enghardt, Reese and Huang, Te-Yuan and Teixeira, Renata},
-  title     = {A Global Perspective on the Past, Present, and Future of Video Streaming over Starlink},
-  year      = {2024},
+@article{Izhikevich2024,
+  author = {Izhikevich, Liz and Enghardt, Reese and Huang, Te-Yuan and Teixeira,
+            Renata},
+  title = {A Global Perspective on the Past, Present, and Future of Video
+           Streaming over Starlink},
+  year = {2024},
   copyright = {Creative Commons Attribution 4.0 International},
-  doi       = {https://doi.org/10.48550/arXiv.2409.09846},
-  keywords  = {Networking and Internet Architecture (cs.NI), Emerging Technologies (cs.ET), Multimedia (cs.MM), Performance (cs.PF), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  doi = {https://doi.org/10.48550/arXiv.2409.09846},
+  keywords = {Networking and Internet Architecture (cs.NI), Emerging
+              Technologies (cs.ET), Multimedia (cs.MM), Performance (cs.PF), FOS:
+              Computer and information sciences, FOS: Computer and information
+              sciences},
   publisher = {arXiv},
 }
 
-@Article{Fang2022,
-  author    = {Fang, Tzu‐Wei and Kubaryk, Adam and Goldstein, David and Li, Zhuxiao and Fuller‐Rowell, Tim and Millward, George and Singer, Howard J. and Steenburgh, Robert and Westerman, Solomon and Babcock, Erik},
-  journal   = {Space Weather},
-  title     = {Space Weather Environment During the SpaceX Starlink Satellite Loss in February 2022},
-  year      = {2022},
-  issn      = {1542-7390},
-  month     = nov,
-  number    = {11},
-  volume    = {20},
-  doi       = {https://doi.org/10.1029/2022SW003193},
+@article{Fang2022,
+  author = {Fang, Tzu‐Wei and Kubaryk, Adam and Goldstein, David and Li, Zhuxiao
+            and Fuller‐Rowell, Tim and Millward, George and Singer, Howard J. and
+            Steenburgh, Robert and Westerman, Solomon and Babcock, Erik},
+  journal = {Space Weather},
+  title = {Space Weather Environment During the SpaceX Starlink Satellite Loss
+           in February 2022},
+  year = {2022},
+  issn = {1542-7390},
+  month = nov,
+  number = {11},
+  volume = {20},
+  doi = {https://doi.org/10.1029/2022SW003193},
   publisher = {American Geophysical Union (AGU)},
 }
 
-@Article{Hapgood2022,
-  author    = {Hapgood, Mike and Liu, Huixin and Lugaz, Noé},
-  journal   = {Space Weather},
-  title     = {SpaceX—Sailing Close to the Space Weather?},
-  year      = {2022},
-  issn      = {1542-7390},
-  month     = mar,
-  number    = {3},
-  volume    = {20},
-  doi       = {https://doi.org/10.1029/2022SW003074},
+@article{Hapgood2022,
+  author = {Hapgood, Mike and Liu, Huixin and Lugaz, Noé},
+  journal = {Space Weather},
+  title = {SpaceX—Sailing Close to the Space Weather?},
+  year = {2022},
+  issn = {1542-7390},
+  month = mar,
+  number = {3},
+  volume = {20},
+  doi = {https://doi.org/10.1029/2022SW003074},
   publisher = {American Geophysical Union (AGU)},
 }
 
-@Article{Omorogiuwa2024,
-  author    = {Osemwegie Omorogiuwa; Nosa Bello; Victor Akhihiero; Somto Akpala},
-  journal   = {JES. Journal of Engineering Sciences},
-  title     = {Performance Test of Spacex’s Starlink: An Empirical Review},
-  year      = {2024},
-  issn      = {2356-8550},
-  month     = sep,
-  number    = {5},
-  pages     = {73--87},
-  volume    = {52},
-  doi       = {10.21608/jesaun.2024.300081.1347},
+@article{Omorogiuwa2024,
+  author = {Osemwegie Omorogiuwa; Nosa Bello; Victor Akhihiero; Somto Akpala},
+  journal = {JES. Journal of Engineering Sciences},
+  title = {Performance Test of Spacex’s Starlink: An Empirical Review},
+  year = {2024},
+  issn = {2356-8550},
+  month = sep,
+  number = {5},
+  pages = {73--87},
+  volume = {52},
+  doi = {10.21608/jesaun.2024.300081.1347},
   publisher = {Egyptian Knowledge Bank},
 }
 
-@InProceedings{Stock2022,
-  author    = {Stock, Gregory and Fraire, Juan A. and Hermanns, Holger},
-  booktitle = {2022 11th Advanced Satellite Multimedia Systems Conference and the 17th Signal Processing for Space Communications Workshop (ASMS/SPSC)},
-  title     = {Distributed On-Demand Routing for LEO Mega-Constellations: A Starlink Case Study},
-  year      = {2022},
-  pages     = {1-8},
-  doi       = {10.1109/ASMS/SPSC55670.2022.9914716},
-  keywords  = {Satellites;Space communications;Multimedia systems;Conferences;Signal processing algorithms;Low earth orbit satellites;Signal processing},
+@inproceedings{Stock2022,
+  author = {Stock, Gregory and Fraire, Juan A. and Hermanns, Holger},
+  booktitle = {2022 11th Advanced Satellite Multimedia Systems Conference and
+               the 17th Signal Processing for Space Communications Workshop
+               (ASMS/SPSC)},
+  title = {Distributed On-Demand Routing for LEO Mega-Constellations: A Starlink
+           Case Study},
+  year = {2022},
+  pages = {1-8},
+  doi = {10.1109/ASMS/SPSC55670.2022.9914716},
+  keywords = {Satellites;Space communications;Multimedia
+              systems;Conferences;Signal processing algorithms;Low earth orbit
+              satellites;Signal processing},
 }
 
-@InProceedings{DBLP:conf/hotnets/Handley18,
-  author    = {Mark Handley},
-  booktitle = {Proceedings of the 17th {ACM} Workshop on Hot Topics in Networks, HotNets 2018, Redmond, WA, USA, November 15-16, 2018},
-  title     = {Delay is Not an Option: Low Latency Routing in Space},
-  year      = {2018},
-  pages     = {85--91},
+@inproceedings{DBLP:conf/hotnets/Handley18,
+  author = {Mark Handley},
+  booktitle = {Proceedings of the 17th {ACM} Workshop on Hot Topics in Networks,
+               HotNets 2018, Redmond, WA, USA, November 15-16, 2018},
+  title = {Delay is Not an Option: Low Latency Routing in Space},
+  year = {2018},
+  pages = {85--91},
   publisher = {{ACM}},
   bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl    = {https://dblp.org/rec/conf/hotnets/Handley18.bib},
-  doi       = {10.1145/3286062.3286075},
+  biburl = {https://dblp.org/rec/conf/hotnets/Handley18.bib},
+  doi = {10.1145/3286062.3286075},
   timestamp = {Mon, 12 Nov 2018 09:36:18 +0100},
-  url       = {https://doi.org/10.1145/3286062.3286075},
+  url = {https://doi.org/10.1145/3286062.3286075},
 }
 
-@Article{DBLP:journals/comcom/ZhangY22,
-  author    = {Shengyu Zhang and Kwan L. Yeung},
-  journal   = {Comput. Commun.},
-  title     = {Scalable routing in low-Earth orbit satellite constellations: Architecture and algorithms},
-  year      = {2022},
-  pages     = {26--38},
-  volume    = {188},
+@article{DBLP:journals/comcom/ZhangY22,
+  author = {Shengyu Zhang and Kwan L. Yeung},
+  journal = {Comput. Commun.},
+  title = {Scalable routing in low-Earth orbit satellite constellations:
+           Architecture and algorithms},
+  year = {2022},
+  pages = {26--38},
+  volume = {188},
   bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl    = {https://dblp.org/rec/journals/comcom/ZhangY22.bib},
-  doi       = {10.1016/J.COMCOM.2022.02.015},
+  biburl = {https://dblp.org/rec/journals/comcom/ZhangY22.bib},
+  doi = {10.1016/J.COMCOM.2022.02.015},
   timestamp = {Wed, 18 May 2022 10:21:43 +0200},
-  url       = {https://doi.org/10.1016/j.comcom.2022.02.015},
+  url = {https://doi.org/10.1016/j.comcom.2022.02.015},
 }
 
-@InProceedings{DBLP:conf/pam/BhosaleSBG23,
-  author    = {Vaibhav Bhosale and Ahmed Saeed and Ketan Bhardwaj and Ada Gavrilovska},
-  booktitle = {Passive and Active Measurement - 24th International Conference, {PAM} 2023, Virtual Event, March 21-23, 2023, Proceedings},
-  title     = {A Characterization of Route Variability in {LEO} Satellite Networks},
-  year      = {2023},
-  editor    = {Anna Brunstr{\"{o}}m and Marcel Flores and Marco Fiore},
-  pages     = {313--342},
+@inproceedings{DBLP:conf/pam/BhosaleSBG23,
+  author = {Vaibhav Bhosale and Ahmed Saeed and Ketan Bhardwaj and Ada
+            Gavrilovska},
+  booktitle = {Passive and Active Measurement - 24th International Conference, {
+               PAM} 2023, Virtual Event, March 21-23, 2023, Proceedings},
+  title = {A Characterization of Route Variability in {LEO} Satellite Networks},
+  year = {2023},
+  editor = {Anna Brunstr{\"{o}}m and Marcel Flores and Marco Fiore},
+  pages = {313--342},
   publisher = {Springer},
-  series    = {Lecture Notes in Computer Science},
-  volume    = {13882},
+  series = {Lecture Notes in Computer Science},
+  volume = {13882},
   bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl    = {https://dblp.org/rec/conf/pam/BhosaleSBG23.bib},
-  doi       = {10.1007/978-3-031-28486-1\_14},
+  biburl = {https://dblp.org/rec/conf/pam/BhosaleSBG23.bib},
+  doi = {10.1007/978-3-031-28486-1\_14},
   timestamp = {Fri, 24 Mar 2023 16:31:05 +0100},
-  url       = {https://doi.org/10.1007/978-3-031-28486-1\_14},
+  url = {https://doi.org/10.1007/978-3-031-28486-1\_14},
 }
 
-@Article{Kisteleki2024,
-  author   = {Robert Kisteleki},
-  journal  = {RIPE Labs},
-  title    = {A Detailed Look at Our Recent RIPE Atlas Infrastructure Migration},
-  year     = {2024},
-  month    = oct,
+@article{Kisteleki2024,
+  author = {Robert Kisteleki},
+  journal = {RIPE Labs},
+  title = {A Detailed Look at Our Recent RIPE Atlas Infrastructure Migration},
+  year = {2024},
+  month = oct,
   keywords = {RIPE Atlas,Disconnect Events,Infrastructure Migration},
 }
 
-@Article{Davies1980,
-  author    = {Davies, Kenneth},
-  journal   = {Space Science Reviews},
-  title     = {Recent progress in satellite radio beacon studies with particular emphasis on the ATS-6 radio beacon experiment},
-  year      = {1980},
-  issn      = {1572-9672},
-  month     = apr,
-  number    = {4},
-  volume    = {25},
-  doi       = {10.1007/BF00241558},
+@article{Davies1980,
+  author = {Davies, Kenneth},
+  journal = {Space Science Reviews},
+  title = {Recent progress in satellite radio beacon studies with particular
+           emphasis on the ATS-6 radio beacon experiment},
+  year = {1980},
+  issn = {1572-9672},
+  month = apr,
+  number = {4},
+  volume = {25},
+  doi = {10.1007/BF00241558},
   publisher = {Springer Science and Business Media LLC},
 }
 
-@InProceedings{DBLP:conf/5gwf/HofmannK19,
-  author    = {Christian A. Hofmann and Andreas Knopp},
-  booktitle = {2nd {IEEE} 5G World Forum, 5GWF 2019, Dresden, Germany, September 30 - October 2, 2019},
-  title     = {Direct Access to {GEO} Satellites: An Internet of Remote Things Technology},
-  year      = {2019},
-  pages     = {578--583},
+@inproceedings{DBLP:conf/5gwf/HofmannK19,
+  author = {Christian A. Hofmann and Andreas Knopp},
+  booktitle = {2nd {IEEE} 5G World Forum, 5GWF 2019, Dresden, Germany, September
+               30 - October 2, 2019},
+  title = {Direct Access to {GEO} Satellites: An Internet of Remote Things
+           Technology},
+  year = {2019},
+  pages = {578--583},
   publisher = {{IEEE}},
   bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl    = {https://dblp.org/rec/conf/5gwf/HofmannK19.bib},
-  doi       = {10.1109/5GWF.2019.8911640},
+  biburl = {https://dblp.org/rec/conf/5gwf/HofmannK19.bib},
+  doi = {10.1109/5GWF.2019.8911640},
   timestamp = {Fri, 09 Apr 2021 18:41:29 +0200},
-  url       = {https://doi.org/10.1109/5GWF.2019.8911640},
+  url = {https://doi.org/10.1109/5GWF.2019.8911640},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
